# sympyfy

./: .gitignore  404.html  LICENSE  README.md  api_urls.py  clean.cmd  covreport.cmd  index.html  main.py  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  todo.txt
.github/workflows/: ci.yml
0sympyfy/: index.html
1structs/: index.html
8demo/: index.html
9status/: index.html
docs/: 0sympyfy.md  1status.md  1structs.md  8demo.md  9status.md  index.md  sympyfy.md  zzz_status.md
search/: search_index.json
sympyfy/: __init__.py  access_token.py  api_structures.py  api_urls.py  common.py  consts.py  isoCountryCodes.py  sympyfy.py  sympyfy_urls.py
sympyfy/api/: api_urls.py  artists.py  tracks.py
sympyfy/tokens/: access_token.py
test/: .env  test_access_token.py  test_add_market.py  test_get_album.py  test_get_artist_related_artists.py  test_get_several_albums.py  test_get_several_track_audio_features.py  test_get_several_tracks.py  test_get_spotify_credentials.py  test_get_track_audio_features.py  test_load_access_token.py  test_load_spotify_credentials.py  test_make_album.py  test_make_albums_list.py  test_make_artist.py  test_make_artists_list.py  test_make_simple_set.py  test_make_track.py  test_make_tracks_list.py  test_make_url.py
test/_tokens/: test_access_token.py  test_load_access_token.py  test_load_spotify_credentials.py
test/access_token/: test_load_access_token.py  test_load_spotify_credentials.py
test/albums/: test_get_album_tracks.py  test_get_new_releases.py  test_make_album.py  test_make_album_tracks.py  test_make_albums_list.py  test_make_new_releases.py
test/artists/: test_artists_get_artist.py  test_artists_make_artist.py  test_artists_make_artists_list.py  test_get_artist.py  test_get_artist_albums.py  test_get_artist_top_tracks.py  test_get_several_artists.py  test_make_artist.py  test_make_artist_albums.py  test_make_artists_list.py
test/categories/: test_get_browse_category.py  test_get_several_browse_categories.py  test_make_categories_list.py  test_make_category.py
test/common/: test_common_add_include_groups.py  test_common_add_market.py  test_common_add_pagination.py  test_common_add_url_parameter.py  test_common_sanitize.py  test_common_value_or_default.py
test/episodes/: test_make_apisode.py
test/genres/: test_get_genres.py
test/market/: test_get_markets.py
test/navigation/: test_make_navigation.py
test/playlists/: test_get_playlist.py  test_get_playlist_cover_image.py  test_get_playlists_by_category.py  test_make_playlist.py  test_make_playlist_cover_image.py  test_make_playlists_by_category.py
(+26 files in other folders)
